--- a/components/aws/sagemaker/workteam/component.yaml
+++ b/components/aws/sagemaker/workteam/component.yaml
@@ -1,74 +1,50 @@
+name: SageMaker - Private Workforce
 description: Private workforce in SageMaker
+inputs:
+- {name: region, type: String, description: The region for the SageMaker resource.}
+- {name: endpoint_url, type: String, description: The URL to use when communicating
+    with the SageMaker service., default: ''}
+- {name: assume_role, type: String, description: The ARN of an IAM role to assume
+    when connecting to SageMaker., default: ''}
+- {name: tags, type: JsonObject, description: 'An array of key-value pairs, to categorize
+    AWS resources.', default: '{}'}
+- {name: team_name, type: String, description: The name of your work team.}
+- {name: description, type: String, description: A description of the work team.}
+- {name: user_pool, type: String, description: An identifier for a user pool. The
+    user pool must be in the same region as the service that you are calling., default: ''}
+- {name: user_groups, type: String, description: A list of identifiers for user groups
+    separated by commas., default: ''}
+- {name: client_id, type: String, description: An identifier for an application client.
+    You must create the app client ID using Amazon Cognito., default: ''}
+- {name: sns_topic, type: String, description: The ARN for the SNS topic to which
+    notifications should be published., default: ''}
+outputs:
+- {name: workteam_arn, description: The ARN of the workteam.}
 implementation:
   container:
+    image: redbackthomson/aws-kubeflow-sagemaker:latest
+    command: [python3]
     args:
     - workteam/src/sagemaker_workteam_component.py
     - --region
-    - inputValue: region
+    - {inputValue: region}
     - --endpoint_url
-    - inputValue: endpoint_url
+    - {inputValue: endpoint_url}
     - --assume_role
-    - inputValue: assume_role
+    - {inputValue: assume_role}
     - --tags
-    - inputValue: tags
+    - {inputValue: tags}
     - --team_name
-    - inputValue: team_name
+    - {inputValue: team_name}
     - --description
-    - inputValue: description
+    - {inputValue: description}
     - --user_pool
-    - inputValue: user_pool
+    - {inputValue: user_pool}
     - --user_groups
-    - inputValue: user_groups
+    - {inputValue: user_groups}
     - --client_id
-    - inputValue: client_id
+    - {inputValue: client_id}
     - --sns_topic
-    - inputValue: sns_topic
+    - {inputValue: sns_topic}
     - --workteam_arn_output_path
-    - outputPath: workteam_arn
-    command:
-    - python3
-    image: redbackthomson/aws-kubeflow-sagemaker:latest
-inputs:
-- description: The region for the SageMaker resource.
-  name: region
-  type: String
-- default: ''
-  description: The URL to use when communicating with the SageMaker service.
-  name: endpoint_url
-  type: String
-- default: ''
-  description: The ARN of an IAM role to assume when connecting to SageMaker.
-  name: assume_role
-  type: String
-- default: '{}'
-  description: An array of key-value pairs, to categorize AWS resources.
-  name: tags
-  type: JsonObject
-- description: The name of your work team.
-  name: team_name
-  type: String
-- description: A description of the work team.
-  name: description
-  type: String
-- default: ''
-  description: An identifier for a user pool. The user pool must be in the same region
-    as the service that you are calling.
-  name: user_pool
-  type: String
-- default: ''
-  description: A list of identifiers for user groups separated by commas.
-  name: user_groups
-  type: String
-- default: ''
-  description: An identifier for an application client. You must create the app client
-    ID using Amazon Cognito.
-  name: client_id
-  type: String
-- default: ''
-  description: The ARN for the SNS topic to which notifications should be published.
-  name: sns_topic
-  type: String
-name: SageMaker - Private Workforce
-outputs:
-- description: The ARN of the workteam.
-  name: workteam_arn
+    - {outputPath: workteam_arn}
